--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -68,7 +68,7 @@
 
   </table>
   <div class="card-body p-0">
-    <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="goToDetailPayment()">Go to checkout
+    <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="goToDetailPayment()"><i class="fas fa-euro-sign mr-2"></i>Go to checkout
     </button>
     <button class="btn btn-lg btn-primary float-right" (click)="retry()">Go back to shopping</button>
     <button class="btn btn-lg btn-warning text-white float-left" (click)="openModal(emptyCartTemplate)"><i class="fas fa-trash"></i> Empty cart</button>
