--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -40,8 +40,8 @@
         <a [routerLink]="['/reserved-area/consumer/bought']" class="list-group-item list-group-item-action text-white">
           <span class="menu-collapsed">My purchases</span>
         </a>
-        <a [routerLink]="['/reserved-area/consumer/coupon-token']" class="list-group-item list-group-item-action text-white">
-          <span class="menu-collapsed">Get Coupon by Token</span>
+        <a [routerLink]="['/reserved-area/consumer/coupon-import']" class="list-group-item list-group-item-action text-white">
+          <span class="menu-collapsed">Import Coupon</span>
         </a>
 
       </div>
