--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -24,7 +24,7 @@
               <tr *ngFor="let coupon of coupons">
                 <td><span style="font-size: 17px;">{{coupon.title}}</span><br/><i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
                 </td>
-                <td><img class="img-thumbnail crop centered-and-cropped" [src]="imageUrl(coupon.image)"
+                <td><img class="img-thumbnail" [src]="imageUrl(coupon.image)"
                          alt="Card image cap"></td>
                 <td>{{formatPrice(coupon.price)}}</td>
                 <td>{{coupon.quantity}}</td>
