--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.scss
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.scss
@@ -9,3 +9,13 @@
   color: #999;
   font-size: 15px;
 }
+.centered-and-cropped {
+  object-fit: cover
+}
+
+.crop {
+  width: 100%;
+  height: 70px;
+  overflow: hidden !important;
+}
+
