--- a/src/app/features/reserved-area/consumer/producer-info/producer-info.component.html
+++ b/src/app/features/reserved-area/consumer/producer-info/producer-info.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mb-0" *ngIf="user !== null">
+<div class="container-fluid mb-0" *ngIf="producer !== null">
   <div class="row">
     <div class="col-lg-6 col-xl-6">
       <div class="card">
