--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -4,3 +4,20 @@
   margin-right: auto;
 
 }
+
+.right {
+
+  display: block;
+  margin-right: 0em;
+
+
+}
+
+.left {
+
+  display: block;
+  margin-left: 0em;
+  margin-right: auto;
+
+
+}
