--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,27 +5,24 @@
 <!--*********per desktop********************-->
 
 
-<nav class="navbar navbar-expand-md navbar-light bg-white fixed-top col-12">
-  <button type="button" id="sidebarCollapse" class="navbar-toggler " (click)="showSideBar()">
+<nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
+  <button  type="button" id="sidebarCollapse" class="navbar-toggler " (click)="showSideBar()">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <picture >
-    <source media="(min-width: 768px)" srcset="assets/img/brand/sardcoin-logo.png">
-    <source media="(min-width: 200px)" srcset="assets/img/brand/sardcoin-logo-small.png">
-    <img class="center" alt="noImage">
-  </picture>
+    <img  *ngIf="isDesktop" src="assets/img/brand/sardcoin-logo.png" class="left">
+    <img  *ngIf="!isDesktop" src="assets/img/brand/sardcoin-logo-small.png" class="center" >
 
 
-  <img *ngIf="isUserLoggedIn" style="padding: 0px; max-width: 45px !important; height: auto"
-       class="nav-link navbar-toggler col-2" type="button" data-toggle="collapse"
-       data-target="#navbarNavDropdown"
-       data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
-       src="assets/img/avatars/8.jpg" alt="{{username}}">
-    <!--<span class="navbar-toggler-icon col-2"></span>-->
 
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+  <!--<img *ngIf="isUserLoggedIn" style="padding: 0px; max-width: 45px !important; height: auto"-->
+       <!--class="nav-link navbar-toggler col-2" type="button" data-toggle="collapse"-->
+       <!--data-target="#navbarNavDropdown"-->
+       <!--data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+       <!--aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"-->
+       <!--src="assets/img/avatars/8.jpg" alt="{{username}}">-->
+
+  <div align="right" class="right" id="navbarNavDropdown">
 
     <div *ngIf="!isUserLoggedIn">
       <ul class="navbar-nav">
@@ -38,16 +35,16 @@
       </ul>
     </div>
 
-    <div *ngIf="isUserLoggedIn" class="ml-auto">
-      <ul class="nav navbar-nav">
+    <div  *ngIf="isUserLoggedIn" >
+      <ul class="nav navbar-nav ">
         <li class="nav-item dropdown">
-          <a  *ngIf="isDesktop" class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-             aria-expanded="false">
-            <i>Welcome back, <b>{{username}}</b>!</i>
+          <a   class="nav-link " data-toggle="dropdown" href="#" role="button"
+             >
+            <i *ngIf="isDesktop">Welcome back, <b>{{username}}</b>!</i>
             <!--<i class="fa fa-2x fa-user-tie"></i>-->
             <img class="img-avatar" src="assets/img/avatars/8.jpg" alt="{{username}}">
           </a>
-          <div class="dropdown-menu dropdown-menu-right float-right col-2">
+          <div class="dropdown-menu  dropdown-menu-right float-right col-2">
             <div class="dropdown-header text-center">
               <strong class="text-capitalize">Settings</strong>
             </div>
