--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -38,13 +38,13 @@
     <div  *ngIf="isUserLoggedIn" >
       <ul class="nav navbar-nav ">
         <li class="nav-item dropdown">
-          <a   class="nav-link " data-toggle="dropdown" href="#" role="button"
-             >
-            <i *ngIf="isDesktop">Welcome back, <b>{{username}}</b>!</i>
+
+            <a   class="nav-link " data-toggle="dropdown" href="#" role="button">
+              <i *ngIf="isDesktop">Welcome back, <b>{{username}}</b>!</i>
             <!--<i class="fa fa-2x fa-user-tie"></i>-->
-            <img class="img-avatar" src="assets/img/avatars/8.jpg" alt="{{username}}">
-          </a>
-          <div class="dropdown-menu  dropdown-menu-right float-right col-2">
+              <img class="img-avatar" src="assets/img/avatars/8.jpg" alt="{{username}}">
+            </a>
+          <div style="position: absolute" class="dropdown-menu  dropdown-menu-right float-right col-2">
             <div class="dropdown-header text-center">
               <strong class="text-capitalize">Settings</strong>
             </div>
