--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -41,8 +41,7 @@
             </span>
           </p>
 
-          <button *ngIf="!inCart(couponPass.id) && couponPass.max_quantity > 0"
-                  class="btn btn-lg btn-success float-right"
+          <button *ngIf="!inCart(couponPass.id) && couponPass.max_quantity > 0" class="btn btn-lg btn-success float-right ml-2"
                   [disabled]="couponPass.max_quantity === 0 || couponPass.quantity === 0" (click)="openModal(template)">
             Add to cart
           </button>
