--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -155,8 +155,10 @@
             <div class="form-group row">
               <label class="col-sm-4 col-lg-2 col-form-label">Place</label>
               <div class="col-sm-4 col-lg-8">
-                <input  type="text" formControlName="constraints" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"/>
+                <input google-place type="text" formControlName="constraints" class="form-control" placeholder="Type to search.."
+                  [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"
+                       (onSelect)="setAddress($event)"/>
+                <!-- Displaying the contents of the address object received from our event emitter -->
                 <div *ngIf="submitted && f.constraints.errors" class="invalid-feedback">
                   <div *ngIf="f.constraints.errors">Value required</div>
                 </div>
