--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!hide || desktopMode " >
+<div style="padding-top: 20%" *ngIf="!hide || desktopMode " >
   <div  id="sidebar-container"  class="sidebar-expanded  col-1-5 " *ngIf="isUserLoggedIn">
 
     <ul class="list-group sticky-top sticky-offset">
