--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -55,3 +55,8 @@
   </div>
 </ng-template>
 
+<!--<button [ngStyle]="{'display': getQuantityCart() > 0 ? 'block' : 'none'}" style="font-size : 3em; padding-bottom: 5px !important " (click)="viewCart()"-->
+        <!--type="button" class="btn-transparent ml-auto ">-->
+      <!--<span   class="cart-bottom fas fa-shopping-cart text-warning">-->
+        <!--<a  style=" font-size : 0.7em; text-decoration-style: solid" class="text">{{getQuantityCart()}}</a></span>-->
+<!--</button>-->
