--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.scss
@@ -24,3 +24,23 @@
   background-color: white!important;
   color: #63c2de!important;
 }
+
+.cart-bottom {
+  background: #bd0a0d;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+
+#myBtn:hover {
+  background-color: #555;
+}
