--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.scss
@@ -6,9 +6,24 @@
   min-width: 200px;
 }
 
+
+.btn-retry-small {
+  margin: 0 auto;
+  padding: 13px;
+  width: 20%;
+  font-size:15px;
+  min-width: 150px;
+}
+
 .crop {
   width: 100%;
   height: 240px;
+  overflow: hidden !important;
+}
+
+.crop-small {
+  width: 80%;
+  height: 192px;
   overflow: hidden !important;
 }
 
