--- a/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
@@ -62,7 +62,12 @@
             </div>
 
             <div class="col-md-12 text-sm-right text-center p-0">
-              <button class="btn btn-lg btn-success"><i class="fas fa-plus-circle mr-3"></i>Add to your purchases</button>
+              <button *ngIf="desktopMode" class="btn btn-lg btn-success"><i class="fas fa-plus-circle mr-3"></i>Add to your purchases</button>
+
+            </div>
+            <div class="center text-center ">
+              <button *ngIf="!desktopMode" class="btn btn-lg btn-success"><i class="fas fa-plus-circle mr-3"></i>Add coupon</button>
+
             </div>
           </form>
         </div>
